if(WITH_DEBUG)
  add_subdirectory(debug)
endif(WITH_DEBUG)

if(WITH_DUPECHECK)
  if(SQLITE3_FOUND)
    add_subdirectory(dupecheck)
  else(SQLITE3_FOUND)
    message("Could not find Sqlite3, not compiling libwzd-dupecheck.")
  endif(SQLITE3_FOUND)
endif(WITH_DUPECHECK)

if(WITH_SFV)
  add_subdirectory(sfv)
endif(WITH_SFV)

if(WITH_LuaDev)
  if(LUA51_FOUND)
    add_subdirectory(lua)
  endif(LUA51_FOUND)
endif(WITH_LuaDev)

if(WITH_PerlDev)
  if(PERL_FOUND)
    add_subdirectory(perl)
  endif(PERL_FOUND)
endif(WITH_PerlDev)

if(WITH_TCLDev)
  if(TCL_FOUND)
    add_subdirectory(tcl)
  endif(TCL_FOUND)
endif(WITH_TCLDev)

if(WITH_Zeroconf)
  if(ZEROCONF_FOUND)
    add_subdirectory(zeroconf)
  endif(ZEROCONF_FOUND)
endif(WITH_Zeroconf)
