INCLUDE_DIRECTORIES(${WZDFTPD_SOURCE_DIR}
	${WZDFTPD_SOURCE_DIR}/libwzd-core
	${WZDFTPD_BINARY_DIR}
	)

ADD_DEFINITIONS(-DHAVE_CONFIG_H)

IF(POSTGRESQL_FOUND)
  ADD_DEFINITIONS(-DHAVE_PGSQL)
  INCLUDE_DIRECTORIES(${POSTGRESQL_INCLUDE_DIR})
ENDIF(POSTGRESQL_FOUND)

ADD_LIBRARY (libwzd_pgsql SHARED
	libpgsql_group.c
	libpgsql_user.c
	libpgsql.h
	libpgsql_main.c
	libpgsql.def
	)

if (CYGWIN OR NOT WIN32)
  SET_TARGET_PROPERTIES(libwzd_pgsql PROPERTIES PREFIX "")
endif (CYGWIN OR NOT WIN32)

SET(libwzd_pgsql_LIBS libwzd_core)

IF(POSTGRESQL_FOUND)
  SET(libwzd_pgsql_LIBS ${libwzd_pgsql_LIBS} ${POSTGRESQL_LIBRARIES})
ENDIF(POSTGRESQL_FOUND)

TARGET_LINK_LIBRARIES (libwzd_pgsql ${libwzd_pgsql_LIBS})

INSTALL(TARGETS libwzd_pgsql DESTINATION ${BACKENDS_INSTALL_PATH})
