INCLUDE_DIRECTORIES(${WZDFTPD_SOURCE_DIR}
	${WZDFTPD_SOURCE_DIR}/libwzd-core
	${WZDFTPD_BINARY_DIR}
	)

ADD_DEFINITIONS(-DHAVE_CONFIG_H)

IF(SQLITE3_FOUND)
  ADD_DEFINITIONS(-DHAVE_SQLITE3)
  INCLUDE_DIRECTORIES(${SQLITE3_INCLUDE_DIR})
ENDIF(SQLITE3_FOUND)

ADD_LIBRARY (libwzd_sqlite SHARED
  libsqlite_main.c
  libsqlite_user.c
  libsqlite_group.c
  libsqlite.def
)

if (CYGWIN OR NOT WIN32)
  SET_TARGET_PROPERTIES(libwzd_sqlite PROPERTIES PREFIX "")
endif (CYGWIN OR NOT WIN32)

SET(libwzd_sqlite_LIBS libwzd_core)

IF(SQLITE3_FOUND)
  SET(libwzd_sqlite_LIBS ${libwzd_sqlite_LIBS} ${SQLITE3_LIBRARIES})
ENDIF(SQLITE3_FOUND)

TARGET_LINK_LIBRARIES (libwzd_sqlite ${libwzd_sqlite_LIBS})

INSTALL(TARGETS libwzd_sqlite DESTINATION ${BACKENDS_INSTALL_PATH})
